--- a/trackyourportfolio/trackyourportfolio/pom.xml
+++ b/trackyourportfolio/trackyourportfolio/pom.xml
@@ -69,6 +69,11 @@
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-core</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-hateoas</artifactId>
+			<version>2.6.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
